Se crea componente CustomHeader y se coloca su respectiva etiqueta en todas las páginas; Para que funcione se crea la carpeta 'shared' que sirve para importar el componente en los diferentes módulos de las páginas

--- a/src/app/automatizar-riego/automatizar-riego.page.html
+++ b/src/app/automatizar-riego/automatizar-riego.page.html
@@ -1,8 +1,5 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>automatizarRiego</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-custom-header></app-custom-header>
+
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
