--- a/src/app/estadisticas/estadisticas.page.html
+++ b/src/app/estadisticas/estadisticas.page.html
@@ -1,8 +1,4 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>estadisticas</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-custom-header></app-custom-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
