--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,40 +1,4 @@
-<ion-header>
-  <ion-toolbar class="custom-header">
-    <!-- Icono del menú lateral -->
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-
-    <!-- Logotipo centrado -->
-    <ion-title class="logo-center">
-      <img src="assets/images/AIMS-name-logo.svg" alt="AIMS Logo" class="logo-image" />
-    </ion-title>
-
-    <!-- Iconos de notificaciones y configuración -->
-    <ion-buttons slot="end">
-      <ion-button>
-        <ion-icon name="notifications-outline" />
-      </ion-button>
-      <ion-button>
-        <ion-icon src="assets/icon/config.svg" />
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
-
-  <!-- Línea de separación -->
-  <div class="separator-line"></div>
-</ion-header>
-
-<!-- <ion-header [translucent]="true">
-  <ion-toolbar color="light">
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>
-      Página de Inicio
-    </ion-title>
-  </ion-toolbar>
-</ion-header> -->
+<app-custom-header></app-custom-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
