--- a/src/app/informacion/informacion.page.html
+++ b/src/app/informacion/informacion.page.html
@@ -1,8 +1,5 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>informacion</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-custom-header></app-custom-header>
+
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
