--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,15 +1,60 @@
 <app-custom-header></app-custom-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer"
-        href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <div id="container-dataTittles">
+      <strong>Bienvenido, Joel García</strong><br>
+      <span style="color: gray;">{{ lastReading }}</span>
+    </div>
+
+    <div id="grid-container">
+      <!-- Tarjeta de Temperatura -->
+      <ion-card class="data-card">
+        <div class="icon-container">
+          <ion-icon name="thermometer-outline" class="data-icon"></ion-icon>
+        </div>
+        <ion-card-title>Temperatura</ion-card-title>
+        <ion-card-content class="card-content">
+          <p class="data-value">{{ Temperature }} °C</p>
+          <p class="data-range">{{ Temperature }} °C</p>
+        </ion-card-content>
+      </ion-card>
+
+      <!-- Tarjeta de Nivel del agua -->
+      <ion-card class="data-card">
+        <div class="icon-container">
+          <ion-icon name="water-outline" class="data-icon"></ion-icon>
+        </div>
+        <ion-card-title>Nivel del agua</ion-card-title>
+        <ion-card-content class="card-content">
+          <p class="data-value">{{ waterlevel }}</p>
+        </ion-card-content>
+      </ion-card>
+
+      <!-- Tarjeta de Humedad del ambiente -->
+      <ion-card class="data-card">
+        <div class="icon-container">
+          <ion-icon name="rainy-outline" class="data-icon"></ion-icon>
+        </div>
+        <ion-card-title>Humedad del ambiente</ion-card-title>
+        <ion-card-content class="card-content">
+          <p class="data-value">min. {{ ambientHumidity }} %</p>
+          <p class="data-range">max. {{ ambientHumidity }} %</p>
+        </ion-card-content>
+      </ion-card>
+
+      <!-- Tarjeta de Humedad del suelo -->
+      <ion-card class="data-card">
+        <div class="icon-container">
+          <ion-icon name="leaf-outline" class="data-icon"></ion-icon>
+        </div>
+        <ion-card-title>Humedad del suelo</ion-card-title>
+        <ion-card-content class="card-content">
+          <p class="data-value">{{ soilHumidity }}</p>
+          <p class="data-range">{{ soilHumidity }}</p>
+        </ion-card-content>
+      </ion-card>
+    </div>
   </div>
+
 </ion-content>
