--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -84,6 +84,12 @@
   color: white;
 }
 
+svg {
+  width: 40px;
+  height: 40px;
+  fill: currentColor;
+}
+
 ion-card-title {
   background-color: #0B3A34; 
   color: white;
