--- a/src/app/configuracion/configuracion.page.html
+++ b/src/app/configuracion/configuracion.page.html
@@ -2,7 +2,7 @@
 
 <ion-content>
   <div class="container">
-    <div class="form-title">Configuración</div>
+    <div class="form-title">Ajustes</div>
 
     <div class="input-item">
       <label class="input-label">Escala de Temperatura</label>
