--- a/src/app/automatizar-riego/automatizar-riego.page.scss
+++ b/src/app/automatizar-riego/automatizar-riego.page.scss
@@ -1,4 +1,3 @@
-
 .container {
   display: flex; 
   flex-direction: column; 
@@ -19,8 +18,8 @@
 }
 
 .input-item {
-  width: 90%; 
-  max-width: 350px; 
+  width: 90%;
+  max-width: 350px;
   margin-bottom: 15px; 
   display: flex;
   flex-direction: column;
@@ -33,8 +32,8 @@
   margin-bottom: 5px;
 }
 
-.custom-select, .custom-timepicker {
-  width: 100%;
+.custom-select, .time-picker {
+  width: 350px;
   padding: 8px;
   font-size: 16px;
   border: 1px solid #ccc;
@@ -42,7 +41,25 @@
   box-sizing: border-box;
 }
 
-/* Botón */
+.time-picker-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 350px;
+}
+
+.time-picker {
+  width: 350px ;
+  text-align: center;
+}
+
+.colon-separator {
+  font-size: 18px;
+  font-weight: bold;
+  color: #333;
+  margin: 0 5px;
+}
+
 .action-button {
   background-color: #0B3A34; 
   color: #ffffff;
@@ -51,8 +68,17 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  width: 90%; 
+  width: 90%;
   max-width: 350px; 
   text-align: center;
 }
 
+.toggle-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 300px;
+  margin: 15px 0;
+  padding: 5px;
+  box-sizing: border-box;
+}
