Fixed Homepage timestamp

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -27,7 +27,7 @@
         <ion-card class="data-card">
           <div class="icon-container">
             <ion-icon name="water-outline" class="data-icon"></ion-icon>
-            <ion-label class="data-icon"> {{waterLevel}} °C</ion-label>
+            <ion-label class="data-icon"> {{waterLevel}} cm</ion-label>
           </div>
           <ion-card-title>Nivel del agua</ion-card-title>
           <ion-card-content class="card-content">
