--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -76,7 +76,7 @@
       </div>
     </div>
 
-
+      // CAMBIAR ESTO QUE SE INTERPONE AL 
       <!-- Tarjeta de Humedad del suelo -->
       <ion-card class="data-card">
         <div class="icon-container">
