--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,16 +1,17 @@
 #container {
   text-align: center;
-
   position: absolute;
   left: 0;
   right: 0;
   top: 50%;
   transform: translateY(-50%);
+  margin: auto;
+  padding-top: auto;
 }
 
 #container strong {
-  font-size: 20px;
-  line-height: 26px;
+  font-size: 4vw;
+  line-height: 3vw;
 }
 
 #container p {
@@ -48,9 +49,6 @@
   width: 100%;
 }
 
-#container {
-  padding: 20px;
-}
 
 #container-dataTittles {
   text-align: center;
@@ -80,7 +78,7 @@
 }
 
 .data-icon {
-  font-size: 40px;  
+  font-size: 20px;  
   color: white;
 }
 
