--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,23 +1,19 @@
 #container {
   text-align: center;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  margin: auto;
-  padding-top: auto;
+  position: relative;
+  margin: 20px auto;
+  padding: auto;
+  max-width: 90%;
 }
 
 #container strong {
-  font-size: 4vw;
-  line-height: 3vw;
+  font-size: 25px;
+  line-height: 2vw;
 }
 
 #container p {
   font-size: 16px;
   line-height: 22px;
-
   color: #8c8c8c;
 
   margin: 0;
@@ -59,6 +55,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);  
   gap: 15px;  
+  margin: 0 auto;
 }
 
 .data-card {
